wip(jdk-only): strict-corpus campaign, 14 failures — lane fixes, unbuilt
Checkpoint commit. NOTHING HERE HAS BEEN BUILT OR RE-MEASURED. Five lanes are
still editing as this lands, so some files are mid-edit by design; this exists
so a stray reset cannot destroy the rest.

The strict corpus had 14 failures. The headline measurement: 12 of them fail in
--real-jdk too and ZERO are strict-only. --jdk-only is not rejecting legitimate
things; it is EXECUTING paths that Compatible mode papered over. So these are
ordinary Compatible-mode defects and each fix repairs both modes.

One disease shape recurred, found independently by five lanes: a synthetic stub
or placeholder shadowing real JDK bytecode that already works.

  - defineHiddenClass: a placeholder registered LATE won on last-write-wins and
    returned a Lookup whose slot 0 was never written. One deletion fixes both
    RJdkHidden and RJdkStrict.
  - Files.copy: registered twice; the winner never read its options argument, so
    a copy onto an existing file silently overwrote.
  - SecureRandom: both construction paths wrote `algorithm` and never `provider`.
  - ServiceLoader: the instance cache already existed and was DEAD — allocated
    and cleared by reload(), never read or written.
  - ForkJoinTask: fork() is a lazy Bridge; the static invokeAll overloads were
    the one real-bytecode route from a lazy fork to an awaitDone nothing could
    satisfy. RJdkForkJoin hung with exactly one thread alive.

Two corrections to earlier records, both mine:
  - RJdkModule was written off as a bad vector because the ad-hoc HotSpot arm
    used the wrong module name. With cratonvm.jdkonly.svc HotSpot passes 44
    checks; it is a real defect. A verdict is only as good as its invocation.
  - RJdkProcess genuinely was a bad vector: it snapshotted the process table
    against a child chosen to die immediately. Rewritten to assert the tree
    against a live child; 26/26 green on HotSpot including 18 under load. Every
    pre-f